# ddos_protect

./: README.md  app.py  auth.py  config.py  cookie_debugging.py  database.py  models.py  pyproject.toml  req.txt  reset_blocks.py  schemas.py  security.py  start_fastapi.sh
data/: local_storage.db  security_cookies.db
middleware/: anomaly_detection.py  cookie_check.py  ddos_protection.py  rate_limiter.py
routers/: __init__.py  auth.py  users.py
scripts/: block_ip.sh
templates/: browser_check.html  error.html  index.html
utils/: cookie_storage.py  local_storage.py  redis_client.py  security_utils.py
