[project]
name = "Antiddos"
version = "0.1.0"
description = "A antiddos"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "cryptography>=44.0.3",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "redis>=6.0.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
    "werkzeug>=3.1.3",
]
